# network-manager

./: CMakeLists.txt  Doxyfile  README.md  network-manager.pri  network-manager.pro
examples/demo/: CMakeLists.txt  demo.pro  main.cpp  testclass.cpp  testclass.h
html/: annotated.html  classNetworkAccessManager-members.html  classNetworkAccessManager.html  classNetworkAccessManager__coll__graph.md5  classNetworkAccessManager__inherit__graph.map  classNetworkResponse-members.html  classNetworkResponse.html  classNetworkResponse__coll__graph.map  classNetworkResponse__inherit__graph.md5  classSNetworkManager_1_1Router-members.html  classSNetworkManager_1_1Router.html  classSNetworkManager_1_1Router__inherit__graph.map  classSNetworkManager_1_1Router__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  md_README.html  menudata.js  networkaccessmanager_8h_source.html  networkmanager_8h_source.html  networkresponse_8h_source.html  pages.html  router_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js
latex/: annotated.tex  classNetworkAccessManager.tex  classNetworkAccessManager__inherit__graph.md5  classNetworkResponse.tex  classNetworkResponse__coll__graph.md5  classSNetworkManager_1_1Router.tex  classSNetworkManager_1_1Router__inherit__graph.md5  hierarchy.tex  md_README.tex  refman.tex
src/: CMakeLists.txt  networkaccessmanager.cpp  networkaccessmanager.h  networkmanager.cpp  networkmanager.h  networkresponse.cpp  networkresponse.h  router.cpp  router.h  src.pro
test/: main.cpp  network-manager.pro  testclass.cpp  testclass.h
tests/: tests.pro  tst_networkmanager.cpp
